feat: return more info about projects
